[gd_scene load_steps=2 format=3 uid="uid://csifo1gye85rn"]

[ext_resource type="Script" uid="uid://dj86hg8yga7v6" path="res://scripts/color_chance_option.gd" id="1_f3ksx"]

[node name="ColorChanceOption" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_direction = 3
offset_left = -441.0
offset_bottom = 32.0
alignment = 2
script = ExtResource("1_f3ksx")

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(282.155, 0)
layout_mode = 2

[node name="IndexLabel" type="RichTextLabel" parent="ColorPickerButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 20
text = "Index: {index} Color: {color}"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChanceSpinBox" type="SpinBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
max_value = 200.0
step = 0.25
allow_greater = true
suffix = "%"
select_all_on_focus = true

[node name="ChanceLabel" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
text = "Chance:"
vertical_alignment = 1

[connection signal="popup_closed" from="ColorPickerButton" to="." method="_on_color_picker_button_popup_closed"]
[connection signal="value_changed" from="ChanceSpinBox" to="." method="_on_chance_spin_box_value_changed"]
